# youbot_description

./: CMakeLists.txt
robots/: youbot_base_only.urdf.xacro
urdf/: common.xacro
urdf/misc/: camera_tower.urdf.xacro
urdf/youbot_arm/: arm.urdf.xacro  limits.urdf.xacro
urdf/youbot_base/: base.urdf.xacro
urdf/youbot_plate/: plate.urdf.xacro
